syntax = "proto3";

option csharp_namespace = "ConsultService.Protos";

service GrpcPatient{
	rpc UpdatePatient (PatientRequest) returns (PatientResponse);
}

message PatientRequest {
	string id = 1;
	string name = 2;
    string date_of_birth = 3;
}

message PatientResponse{
	string message = 1;
}
